# perl-Amazon-SSM

./: .gitignore  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  bootstrap  buildspec.yml  configure  configure.ac  perl-Amazon-SSM.spec.in
autom4te.cache/: output.2  requests  traces.0  traces.2
src/: Makefile.in
src/examples/: GetParameter.pl
src/main/: Makefile.in
src/main/perl/: Makefile.am  Makefile.in
src/main/perl/lib/: Makefile.am  Makefile.in
src/main/perl/lib/Amazon/: SSM.pm.in
src/main/perl/t/: 00-load.t  Makefile.am  amazon-ssm.t
